--- a/instance.yaml
+++ b/instance.yaml
@@ -102,7 +102,7 @@ Resources:
             pip install --upgrade git+https://github.com/huggingface/diffusers.git transformers accelerate scipy safetensors xformers
             pip install flask-cors
             cd /home/ubuntu/
-            git clone https://github.com/superyhee/Stable-Diffusion-OneClick-AWS.git
+            git clone https://sgithub.com/soukengo/Stable-Diffusion-OneClick-AWS.git
             wget https://civitai.com/api/download/models/14856 -O ./Stable-Diffusion-OneClick-AWS/moxin.safetensors
             sudo chown  ubuntu Stable-Diffusion-OneClick-AWS
             chmod u+w Stable-Diffusion-OneClick-AWS
